// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ---------------------------------------------------------
// ENUMS
// ---------------------------------------------------------

enum Role {
  ADMIN
  DOCTOR
  PATIENT
}

enum PrescriptionStatus {
  PENDING
  CONSUMED
}

enum ThemePreference {
  SYSTEM
  LIGHT
  DARK
}

// ---------------------------------------------------------
// MODELS
// ---------------------------------------------------------

model User {
  id              String          @id @default(uuid())
  email           String          @unique
  passwordHash    String
  role            Role
  themePreference ThemePreference @default(SYSTEM)
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt

  doctor    Doctor?
  patient   Patient?
  auditLogs PrescriptionAuditLog[] @relation("ChangedBy")

  @@index([email])
}

model Doctor {
  id                String  @id @default(uuid())
  userId            String  @unique
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  specialty         String?
  medicalId         String?
  signatureText     String?
  signatureImageUrl String?

  prescriptions Prescription[] @relation("AuthoredBy")
}

model Patient {
  id        String    @id @default(uuid())
  userId    String    @unique
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  birthDate DateTime?

  prescriptions Prescription[]
}

model Prescription {
  id         String             @id @default(uuid())
  code       String             @unique
  status     PrescriptionStatus @default(PENDING)
  notes      String?
  createdAt  DateTime           @default(now())
  updatedAt  DateTime           @updatedAt
  consumedAt DateTime?

  authorId String
  author   Doctor @relation("AuthoredBy", fields: [authorId], references: [id])

  patientId String
  patient   Patient @relation(fields: [patientId], references: [id])

  items     PrescriptionItem[]
  auditLogs PrescriptionAuditLog[]

  @@index([status, createdAt])
  @@index([patientId])
  @@index([authorId])
  @@index([notes])
}

model PrescriptionItem {
  id           String   @id @default(uuid())
  name         String
  dosage       String?
  quantity     Int?
  instructions String?
  createdAt    DateTime @default(now())

  prescriptionId String
  prescription   Prescription @relation(fields: [prescriptionId], references: [id], onDelete: Cascade)

  @@index([prescriptionId])
  @@index([name])
}

model PrescriptionAuditLog {
  id             String       @id @default(uuid())
  prescriptionId String
  prescription   Prescription @relation(fields: [prescriptionId], references: [id], onDelete: Cascade)

  changedById String?
  changedBy   User?   @relation("ChangedBy", fields: [changedById], references: [id], onDelete: SetNull)

  fromStatus PrescriptionStatus?
  toStatus   PrescriptionStatus
  reason     String?
  createdAt  DateTime            @default(now())

  @@index([prescriptionId])
  @@index([changedById])
  @@index([createdAt])
  @@index([toStatus])
}
