%%{init: {"theme": "base", "themeVariables": {"fontSize": "16px"}}}%%
erDiagram
    USER {
        string id PK
        string email UK
        string passwordHash
        string role
        string themePreference
        datetime createdAt
        datetime updatedAt
    }

    DOCTOR {
        string id PK
        string userId UK
        string specialty
        string medicalId
        string signatureText
        string signatureImageUrl
    }

    PATIENT {
        string id PK
        string userId UK
        datetime birthDate
    }

    PRESCRIPTION {
        string id PK
        string code UK
        string status
        string notes
        datetime createdAt
        datetime updatedAt
        datetime consumedAt
        string authorId
        string patientId
    }

    PRESCRIPTION_ITEM {
        string id PK
        string name
        string dosage
        int quantity
        string instructions
        datetime createdAt
        string prescriptionId
    }

    PRESCRIPTION_AUDIT_LOG {
        string id PK
        string prescriptionId
        string changedById
        string fromStatus
        string toStatus
        string reason
        datetime createdAt
    }

    USER ||--o| DOCTOR : "1:1"
    USER ||--o| PATIENT : "1:1"
    USER ||--o{ PRESCRIPTION_AUDIT_LOG : "changedBy"
    DOCTOR ||--o{ PRESCRIPTION : "author"
    PATIENT ||--o{ PRESCRIPTION : "receiver"
    PRESCRIPTION ||--o{ PRESCRIPTION_ITEM : "items"
    PRESCRIPTION ||--o{ PRESCRIPTION_AUDIT_LOG : "audit"